# Third_Semestr

./: README.md
C++/: winapi-gui.pptx
C++/Binary_Parser/: Binary_Parser.sln
C++/Binary_Parser/Binary_Parser/: Binary_Parser.cpp  Binary_Parser.h  Binary_Parser.vcxproj  Binary_Parser.vcxproj.filters  main.cpp
C++/BrezenHam_RayLib/: BrezenHam_RayLib.sln
C++/BrezenHam_RayLib/BrezenHam_RayLib/: BrezenHam_RayLib.vcxproj  main.cpp
C++/Firefox_Telegram_Sender/: CMakeLists.txt  CMakePresets.json
C++/Firefox_Telegram_Sender/Firefox_Telegram_Sender/: CMakeLists.txt  Firefox_Telegram_Sender.cpp  Firefox_Telegram_Sender.h  logins.json  tb.txt
C++/GraphBoost/: GraphBoost.sln
C++/GraphicSort/: GraphicSort.sln
C++/Logger/: Logger.sln
C++/Matrix/: Matrix.sln
C++/MyRequest/: MyRequest.sln
C++/My_String_And_Vector_Class/: My_String_And_Vector_Class.sln
C++/NoteManager/: NoteManager.sln
C++/Polynomial_Class/: Polynomial_Class.sln
C++/RAII_Contain/: Project1.sln
C++/Shape_Prac/: Shape_Prac.sln
C++/Thread_Sort/: Thread_Sort.sln
C++/Triangle/: CMakeLists.txt
C++/UFO_Operator/: UFO_Operator.sln
Python/Chel_News_Class/: Comment.py  News.py  User.py  config.py  main.py  var.py
Python/Cpython_Desc/: main.py
Python/FML_31_Parser/: DateBaseConnect.py  Moduls.py  main.py  news.db  requirements.txt
Python/File_XOR/: 1.txt  123.txt  main.py
Python/Practis_1/: task_2.py  tast_1.py
Python/Telebot_Inline_Buttons/: 3_lec.json  main.py
Python/Telebot_Practis/: Bots_User.py  config.py  main.py
Python/Telebot_Weather/: main.py  taburetka.txt
(+250 files in other folders)
